install angular
